clean up and generate docs
