# controllers/form_controller.go
@@ -33,6 +33,11 @@ func NewFormController(injector *do.Injector) (*FormController, error) {
 // @Param Authorization header string true "Bearer Token"
 // @Param X-Project header string true "Project UUID"
 //
+// @Param page query string false "Page number for pagination"
+// @Param limit query string false "Number of items per page"
+// @Param sort query string false "Field to sort by"
+// @Param order query string false "Sort order (asc or desc)"
+//
 // @Success 200 {array} responses.Response{content=[]resources.FormResponse} "List of forms"
 // @Failure 400 "Invalid input"
 // @Failure 401 "Unauthorized"
